--- a/index.html
+++ b/index.html
@@ -1,128 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>iab bridge</title>
 </head>
-<body onload="startBridge()">
+
+<body onload="init()">
     <script>
-        window.VERSION = "1.2.0";
         var cName = null,
-        cDomain = "." + location.hostname.split(".").slice(-2).join("."),
-        cKeep = 10,
-        TCF_COOKIE_NAME = "euconsent",
-        TCF_V2_COOKIE_NAME = "euconsent-v2",
-        isProd = "local.cdn" !== location.hostname;
-
-        function isConsentCookie(e) {
-        return 0 === e.indexOf("_iub_cs")
-        }
-
-        function isGoogleCookie(e) {
-        return e.match(/^_iub_cs-[0-9]+-granular$/)
-        }
+            cDomain = "." + location.hostname.split(".").slice(-2).join("."),
+            cKeep = 10,
+            TCF_COOKIE_NAME = "euconsent",
+            TCF_V2_COOKIE_NAME = "euconsent-v2";
 
         function getParameterByName(e, o) {
-        o = o.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
-        var t = new RegExp("[\\?&]" + o + "=([^&#]*)").exec(e);
-        return null === t ? null : decodeURIComponent(t[1].replace(/\+/g, " "))
+            o = o.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+            var t = new RegExp("[\\?&]" + o + "=([^&#]*)").exec(e);
+            return null === t ? null : decodeURIComponent(t[1].replace(/\+/g, " "))
         }
 
         function resetCookieInternal(e) {
-        for (var o = document.cookie.split(";"), t = [], a = 0; a < o.length; a++) { for (var
-            i=o[a]; " "===i.charAt(0);) i=i.substring(1); var n=i.split("=")[0],
-            r = -1 !== n.indexOf(" -granular"); - 1 !==n.indexOf("_iub_cs") && r===e && t.push({ cName: n, cValue:
-            JSON.parse(decodeURIComponent(i.split("=")[1]))
-        })
-    }
-    for (var c = 0; c < t.length; c++) {
-        var s = t[c].cName + "=; expires=Thu, 01 Jan 1970 00:00:01 GMT; path=/; domain=" + cDomain;
-        document.cookie = s
-    }
-}
-
-function resetCookie() {
-    resetCookieInternal(!1)
-}
-
-function resetCookieGoogle() {
-    resetCookieInternal(!0)
-}
-
-function setCMPCookie(e, o) {
-    var t = new Date;
-    t.setTime(t.getTime() + 33696e6);
-    var a = e + "=" + o + " ; expires=" + t.toUTCString() + " ;samesite=none"; a +=isProd
-            ? "; domain=.consensu.org; path=/;secure" : "; domain=.local.cdn; path=/" , document.cookie=a } function
-            getCMPCookie(e) { var o=("; " + document.cookie).split(" ; " + e + "=");
-    return 2 === o.length ? o.pop().split(" ;").shift() : null } function setLocalCookieInternal(e, o, t) { var a=(t=t
-            || {}).expireAfter || 365, i=t.path || "/" , n=JSON.stringify(o), r=new Date; r.setTime(r.getTime() + 24 * a
-            * 60 * 60 * 1e3); var c=e + "=" + encodeURIComponent(n) + "; expires=" + r.toUTCString() + "; path=" + i
-            + "; domain=" + cDomain + ";samesite=none" ; isProd && (c +=";secure" ), document.cookie=c } function
-            setLocalCookie(e, o, t) { isConsentCookie(e) && setLocalCookieInternal(e, o, t) } function
-            setLocalCookieGoogle(e, o, t) { isGoogleCookie(e) && setLocalCookieInternal(e, o, t) } function
-            getLocalCookieInternal(e) { e +="=" ; for (var o=document.cookie.split(";"), t=0; t < o.length; t++) { for
-            (var a=o[t]; " "===a.charAt(0);) a=a.substring(1); var i=a.substring(e.length, a.length); if
-            (0===a.indexOf(e)) return compactCookies(), JSON.parse(decodeURIComponent(i)) } return compactCookies(),
-            null } function getLocalCookie(e) { if (isConsentCookie(e)) return getLocalCookieInternal(e) } function
-            getLocalCookieGoogle(e) { if (isGoogleCookie(e)) return getLocalCookieInternal(e) } function
-            compactCookies() { for (var e=document.cookie.split(";"), o=[], t={}, a=0; a < e.length; a++) { for (var
-            i=e[a]; " "===i.charAt(0);) i=i.substring(1); var n=i.split("="),
-            r = n[0],
-            c = r.match(/^_iub_cs-([0-9]+)/);
-        if (c) {
-            var s;
-            try {
-                s = JSON.parse(decodeURIComponent(n[1]))
-            } catch (e) {
-                s = {
-                    timestamp: new Date(0).toJSON()
-                }
+            for (var o = document.cookie.split(";"), t = [], a = 0; a < o.length; a++) {
+                for (var
+                        i = o[a];
+                    " " === i.charAt(0);) i = i.substring(1);
+                var n = i.split("=")[0],
+                    r = -1 !== n.indexOf(" -granular"); - 1 !== n.indexOf("_iub_cs") && r === e && t.push({
+                    cName: n,
+                    cValue: JSON.parse(decodeURIComponent(i.split("=")[1]))
+                })
             }
-            var l = c[1];
-            o.push({
-                cName: r,
-                cValue: s,
-                cookiePolicyId: l
-            }), void 0 !== s.timestamp ? t[l] = new Date(s.timestamp).getTime() : t[l] = t[l] || 0
+            for (var c = 0; c < t.length; c++) {
+                var s = t[c].cName + "=; expires=Thu, 01 Jan 1970 00:00:01 GMT; path=/; domain=" + cDomain;
+                document.cookie = s
+            }
         }
-    }
-    o.sort(function (e, o) {
-        return t[e.cookiePolicyId] - t[o.cookiePolicyId]
-    }).reverse(), o.splice(0, cKeep);
-    for (var g = 0; g < o.length; g++) {
-        var m = o[g].cName + "=; expires=Thu, 01 Jan 1970 00:00:01 GMT; path=/; domain=" + cDomain;
-        document.cookie = m
-    }
-}
 
-function startBridge() {
-    var e = window.parent,
-        o = decodeURIComponent(document.location),
-        t = getParameterByName(o, " meth"), a=getParameterByName(o, "origin" ); if ('"setCMP"'===t ?
-            (setCMPCookie(TCF_COOKIE_NAME, getParameterByName(o, "value" ).replace(/["]+/g, "" )),
-            e.postMessage(JSON.stringify({ action: "cmpCookieSet" }), a)) : '"getCMP"'===t &&
-            e.postMessage(JSON.stringify({ action: "cmpCookieFetched" , value: getCMPCookie(TCF_COOKIE_NAME) }),
-            a), '"setTcfv2"'===t) setCMPCookie(TCF_V2_COOKIE_NAME, getParameterByName(o, "value" ).replace(/["]+/g, ""
-            )), e.postMessage(JSON.stringify({ action: "tcfv2CookieSet" }), a); else if ('"getTcfv2"'===t)
-            e.postMessage(JSON.stringify({ action: "tcfv2CookieFetched" , value: getCMPCookie(TCF_V2_COOKIE_NAME) }),
-            a); else if ('"compact"'===t) compactCookies(), e.postMessage(JSON.stringify({
-            action: "remoteCookiesCompact" }), a); else if ('"reset"'===t) resetCookie(); else if ('"set"'===t) { if
-            ((c=(getParameterByName(o, "c_name" ) || "" ).replace(/["]+/g, "" )) && "" !==c) { var i={ id:
-            parseInt(getParameterByName(o, "id" ).replace(/["]+/g, "" )), timestamp: getParameterByName(o, "timestamp"
-            ).replace(/["]+/g, "" ), version: getParameterByName(o, "version" ).replace(/["]+/g, "" ) },
-            n=getParameterByName(o, "consent" ), r=getParameterByName(o, "purposes" ); n ?
-            i.consent="true"===n.replace(/["]+/g, "" ) : r && (i.purposes=JSON.parse(r)), setLocalCookie(c, i) }
-            e.postMessage(JSON.stringify({ action: "remoteCookieSet" }), a) } else if ('"setGoogle"'===t) { var c;
-            (c=(getParameterByName(o, "c_name" ) || "" ).replace(/["]+/g, "" )) && "" !==c && setLocalCookieGoogle(c, {
-            googleAdsPersonalized: "true"===getParameterByName(o, "googleAdsPersonalized" ).replace(/["]+/g, "" ) }) }
-            else '"getGoogle"'===t ? (c=(getParameterByName(o, "c_name" ) || "" ).replace(/["]+/g, "" )) && "" !==c &&
-            e.postMessage(JSON.stringify({ action: "pickUpRemoteCookieGoogle" , data: getLocalCookieGoogle(c) }), a)
-            : '"resetGoogle"'===t ? resetCookieGoogle() : (c=(getParameterByName(o, "c_name" ) || ""
-            ).replace(/["]+/g, "" )) && "" !==c && e.postMessage(JSON.stringify({ action: "pickUpRemoteCookie" , data:
-            getLocalCookie(c) }), a) }
+        function resetCookie() {
+            resetCookieInternal(!1)
+        }
+
+        function setCMPCookie(e, o) {
+            var t = new Date;
+            t.setTime(t.getTime() + 33696e6);
+            var a = e + "=" + o + " ; expires=" + t.toUTCString() + " ;samesite=none";
+            a += "; domain=.consensu.org; path=/;secure";
+            document.cookie = a
+        }
+
+        function getCMPCookie(e) {
+            var o = ("; " + document.cookie).split(" ; " + e + "=");
+            return 2 === o.length ? o.pop().split(" ;").shift() : null
+        }
+
+
+        function init() {
+            var parentWindow = window.parent,
+                loc = decodeURIComponent(document.location),
+                method = getParameterByName(loc, " meth"),
+                origin = getParameterByName(loc, "origin");
+
+            if ('"getTcfv2"' === method) {
+                parentWindow.postMessage(JSON.stringify({
+                    action: "tcfv2CookieFetched",
+                    value: getCMPCookie(TCF_V2_COOKIE_NAME)
+                }),origin);
+            } else if ('"setTcfv2"' === method) {
+                setCMPCookie(TCF_V2_COOKIE_NAME, getParameterByName(loc, "value").replace(/["]+/g, ""));
+                parentWindow.postMessage(JSON.stringify({
+                    action: "tcfv2CookieSet"
+                }), origin);
+            } else if ('"reset"' === method) resetCookie();
+        }
     </script>
 </body>
+
 </html>
