--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             var t = new Date;
             t.setTime(t.getTime() + 33696e6);
             var a = e + "=" + o + " ; expires=" + t.toUTCString() + " ;samesite=none";
-            a += "; domain=github.io; path=/;secure";
+            a += "; path=/;secure";
             document.cookie = a
         }
 
