--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 </head>
 <body>
     <h1>Test site</h1>
-    <img src="images/apple.jpg" alt="">
+    <script>
+        let img = document.createElement('img');
+        img.src = './images/apple.jpg'
+        document.body.appendChild(img)
+    </script>
 
     <link rel='stylesheet' type='text/css' href='https://cdn-dev.securiti.xyz/consent/cookie-consent.css' />
     <script type="text/javascript" src="https://cdn-dev.securiti.xyz/consent/sdk-stub.js" defer></script>
