--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>Test site</h1>
     <script>
         let img = document.createElement('img');
-        img.src = './images/apple.jpg'
+        img.src = 'https://akshaypatange.github.io/images/apple.jpg'
         document.body.appendChild(img)
     </script>
 
