--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
 </head>
 <body>
     <h1>Test site</h1>
-    <script>
-        let img = document.createElement('img');
-        img.src = 'https://akshaypatange.github.io/images/apple.jpg'
-        document.body.appendChild(img)
-    </script>
+    <script src="https://akshaypatange.github.io/scripts/image.js"></script>
 
     <link rel='stylesheet' type='text/css' href='https://cdn-dev.securiti.xyz/consent/cookie-consent.css' />
     <script type="text/javascript" src="https://cdn-dev.securiti.xyz/consent/sdk-stub.js" defer></script>
